Backport to Minecraft 1.20.4